Testing bug fix for slow loading images on mobile

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -3,7 +3,6 @@
     to { transform: translate3d(0, -15px, 0);}
 }
 .downarrowsvg{
-    position: relative;
     width: 14vw;
     max-width: 3rem;
     fill: white;
@@ -13,25 +12,15 @@
     animation: arrowbounce 1s;
     animation-direction: alternate;
     animation-iteration-count: infinite;
-
-}
-.arrowwrap{
-    display: flex;
-    order: 3;
-    height: 0;
 }
 .downarrowbtn{
-    position: relative;
     display: flex;
-    bottom: 1.8vh;
-    left: 47vw;
     width: 14vw;
     max-width: 3rem;
     align-self: center;
     margin-bottom: 0.5rem;
     background: transparent;
     border: transparent;
-    order: 2;
 }
 
 html,body
@@ -46,22 +35,14 @@ html,body
 .header{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    /* align-items: flex-end; */
-    min-height: 100vh;
-    margin: 0;
-    /* background-image: url(images/drinkmobile.jpg);
+    justify-content: space-between;
+    background-image: url(images/drinkmobile.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100% 100%; */
+    background-size: 100% 100%;
+    min-height: 100vh;
     }
-.headerimg{
-    display: flex;
-    width: 100%;
-    height: 120%;
-    order: 1;
-}
 body{
     display: flex;
     flex-direction: column;
